--- a/waybar/config
+++ b/waybar/config
@@ -13,10 +13,9 @@
 		"pulseaudio",
 		"memory",
 		"cpu",
+		"network",
 		"tray",
-		"clock#1",
-		"clock#2",
-		"clock#3"
+		"clock"
 	],
 
 	"hyprland/workspaces": {
@@ -24,7 +23,7 @@
 	  "disable-scroll": true,
 	  "on-click": "activate",
 	  "format-icons": {
-	    "1": "",
+	    "1": "",
 	    "2": "",
 	    "3": "",
 	    "4": "",
@@ -36,17 +35,10 @@
 	  "sort-by-number": true
 	},
 
-	"clock#1": {
-		"format": "{:%a}",
-		"tooltip": false
-	},
-	"clock#2": {
-		"format": "{:%H:%M}",
-		"tooltip": false
-	},
-	"clock#3": {
-		"format": "{:%m-%d}",
-		"tooltip": false
+	"clock": {
+		"format": "{:%Y-%m-%d | %H:%M}",
+	        "tooltip-format": "{:%Y-%m-%d | %H:%M}",
+        	"format-alt": "{:%Y-%m-%d}"
 	},
 
 	"pulseaudio": {
@@ -64,15 +56,28 @@
 		"on-click": "pamixer -t",
 		"on-click-right": "pavucontrol"
 	},
+
 	"memory": {
 		"interval": 5,
 		"format": "Mem {}%"
 	},
+
+
+	"network": {
+		"interval": 10,
+	        // "interface": "wlpXsY", // (Optional) To force the use of this interface
+	        "format-wifi": "{essid} ({signalStrength}%) ",
+	        "format-ethernet": "{ifname}: {ipaddr}/{cidr} ",
+	        "format-disconnected": "Disconnected ⚠",
+		// "on-click": "alacritty -e ip a"
+	},
+
 	"cpu": {
 		"interval": 5,
 		"format": "CPU {usage:2}%",
 		"on-click": "alacritty -e htop"
 	},
+
 	"tray": {
 		"icon-size": 20
 	}
