--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -29,6 +29,9 @@ $menu = wofi --show drun
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 
+# dh: thunar as daemon
+exec-once = thunar --daemon
+
 # dh: use waybar
 exec-once = waybar -c $HOME/.config/waybar/config
 
@@ -37,6 +40,9 @@ exec-once = mako --config $HOME/.config/mako/config
 
 # dh use hyprpaper as wallpaper app
 exec-once = hyprpaper
+
+# hyprpm: reload // hyprexpo:expo plugin
+exec-once = hyprpm reload -n
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -106,8 +112,7 @@ decoration {
     blur {
         enabled = true
         size = 3
-        passes = 1
-        
+        passes = 1       
         vibrancy = 0.1696
     }
 }
@@ -115,11 +120,8 @@ decoration {
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
     enabled = true
-
     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
     animation = windows, 1, 7, myBezier
     animation = windowsOut, 1, 7, default, popin 80%
     animation = border, 1, 10, default
@@ -141,8 +143,9 @@ master {
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc { 
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
+    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
+    font_family = "Source Code Pro"
 }
 
 
@@ -174,15 +177,15 @@ gestures {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
-device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
-}
+#device {
+#    name = epic-mouse-v1
+#    sensitivity = -0.5
+#}
 
 
 ####################
 ### KEYBINDINGSS ###
-####################
+##################z##
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
@@ -250,14 +253,10 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # dh GameMode From hyprland.org Wiki
-# bind = $mainMod, F11, exec, $HOME/.config/hypr/gamemode.sh
-# bind = $mainMod, F11, exec, /home/dh/.config/hypr/gamemode.sh
-# bind = $mainMod, F11, workspace, e+1l
+bind = $mainMod, F11, exec, $HOME/.config/hypr/gamemode.sh
 
-# Steam Workspace 10
+# Steam always on Workspace 10
 workspace = 10, rounding:false, decorate:false, gapsin:0, gapsout:0, border:false, decorate:false
-# $script="HYPRGAMEMODE=\$(hyprctl getoption animations:enabled | awk 'NR==1{print \$2}') if [ \"\$HYPRGAMEMODE\" = 1 ] ; then hyprctl --batch \"keyword animations:enabled 0; keyword decoration:drop_shadow 0; keyword decoration:blur:enabled 0; keyword general:gaps_in 0; keyword general:gaps_out 0; keyword general:border_size 1; keyword decoration:rounding 0\"; exit; fi; hyprctl reload"
-# bind = $mainMod, F11, execr, command $script
 # dh open steam always in workspace 10
 windowrulev2 = workspace 10, title:^(Steam)$
 
