--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -192,13 +192,11 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, $terminal
-# bind = $mainMod, W, killactive,
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
-#bindr = $mainMod, R, exec, pkill $menu || $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
@@ -243,10 +241,19 @@ bind = $mainMod, mouse_up, workspace, e-1
 # dh
 bind = $mainMod, page_up, workspace, e+1
 bind = $mainMod, page_down, workspace, e-1
-bind = $mainMod SHIFT, page_up, movetoworkspace, e+1
-bind = $mainMod SHIFT, page_down, movetoworkspace, e-1
-bind = $mainMod CTRL, left, workspace, e-1
-bind = $mainMod CTRL, right, workspace, e+1
+
+# dh move to workspace
+bind = $mainMod SHIFT, page_up, movetoworkspace, e-1
+bind = $mainMod SHIFT, page_down, movetoworkspace, e+1
+bind = $mainMod SHIFT, left, movetoworkspace, e-1
+bind = $mainMod SHIFT, right, movetoworkspace, e+1
+
+# bind = $mainMod CTRL, left, workspace, e-1
+# bind = $mainMod CTRL, right, workspace, e+1
+
+# dh switch current workspace
+bind = $mainMod, left, workspace, e-1
+bind = $mainMod, right, workspace, e+1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
@@ -261,7 +268,7 @@ workspace = 10, rounding:false, decorate:false, gapsin:0, gapsout:0, border:fals
 windowrulev2 = workspace 10, title:^(Steam)$
 
 # always float mpv
-windowrule = float, ^(mpv)$
+# windowrule = float, ^(mpv)$
 
 # dh unbind/bind all with (Mod)+Shift+F12
 bind = $mainMod, F12, submap, clean
@@ -317,6 +324,18 @@ bind = , XF86AudioPrev, exec, playerctl previous
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+
+
+# dh Wallpaper with hyprpaper
+# Note: images must be preloaded via hyprpaper.conf
+#bind=SUPER,1,workspace,1  #Superkey + 1 switches to workspace 1
+#bind=SUPER,1,exec,$w1     #SuperKey + 1 switches to wallpaper $w1 on DP-1 as defined in the variable
+#bind=SUPER,2,workspace,2  #Superkey + 2 switches to workspace 2
+#bind=SUPER,2,exec,$w2     #SuperKey + 2 switches to wallpaper $w2 on DP-1 as defined in the variable
+#bind=SUPER,3,workspace,3  #Superkey + 3 switches to workspace 3
+#bind=SUPER,3,exec,$w3     #SuperKey + 3 switches to wallpaper $w3 on DP-1 as defined in the variable
+#... and so on
+
 
 # dh Enable logs
 # debug:disable_logs = false
