--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,17 +1,13 @@
-$file1 = ~/Wallpaper/pb1.jpeg
-$file2 = ~/Wallpaper/pb2.jpeg
-$file3 = ~/Wallpaper/pb3.jpeg
-$file4 = ~/Wallpaper/pb4.jpeg
-$file5 = ~/Wallpaper/pb5.jpeg
-
+# preload wallpapers
+$file1 = ~/Wallpaper/wall.jpeg
 preload = $file1
-preload = $file2
-preload = $file3
-preload = $file4
-preload = $file5
 
-wallpaper = DP-1,/home/dh/Wallpaper/pb1.jpeg
+# preload more wallpapers here...
+# preload = ...
+
+# set wallpaper for main display
+wallpaper = DP-1,~/Wallpaper/wall.jpeg
 
 # other settings
-splash = true
+splash = off
 # ipc = off
