--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -54,17 +54,20 @@ env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
 # dh
-
 env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = QT_QPA_PLATFORM,wayland
+# nvidia/electron fix: package needed: libva-nvidia-driver
+env = NVD_BACKEND,direct
 
 # dh darkmode 
 exec = gsettings set org.gnome.desktop.interface gtk-theme "Adwaita:dark"   # for GTK3 apps
 exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"   # for GTK4 apps
-env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
+# env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
 
+# nvidia
 cursor {
    no_hardware_cursors = true
 }
@@ -78,8 +81,8 @@ cursor {
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general { 
-    gaps_in = 5
-    gaps_out = 20
+    gaps_in = 8
+    gaps_out = 8
     border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
@@ -87,26 +90,27 @@ general {
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = false
+    resize_on_border = true
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 
-    layout = dwindle
+    # layout = dwindle
+    layout = master
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
+    rounding = 0
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
     # inactive_opacity = 0.8
 
-    drop_shadow = true
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    drop_shadow = false
+    # shadow_range = 10
+    # shadow_render_power = 3
+    # col.shadow = rgba(1a1a1aee)
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
@@ -138,14 +142,17 @@ dwindle {
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
-    new_status = master
+    new_status = inherit # master # slave, inherit
+    orientation = left
+    # mfact = 0.7
+    no_gaps_when_only = 0
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc { 
     force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
-    font_family = "Source Code Pro"
+    # font_family = "Source Code Pro"
 }
 
 
@@ -175,14 +182,6 @@ gestures {
     workspace_swipe = false
 }
 
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
-#device {
-#    name = epic-mouse-v1
-#    sensitivity = -0.5
-#}
-
-
 ####################
 ### KEYBINDINGSS ###
 ##################z##
@@ -192,7 +191,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, $terminal
-bind = $mainMod, Q, killactive,
+binde = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
@@ -218,17 +217,17 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
+# Move active window to a workspace SILENTLY (without switching to it. movetoworkspace) with mainMod + SHIFT + [0-9]
+bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
+bind = $mainMod SHIFT, 2, movetoworkspacesilent, 2
+bind = $mainMod SHIFT, 3, movetoworkspacesilent, 3
+bind = $mainMod SHIFT, 4, movetoworkspacesilent, 4
+bind = $mainMod SHIFT, 5, movetoworkspacesilent, 5
+bind = $mainMod SHIFT, 6, movetoworkspacesilent, 6
+bind = $mainMod SHIFT, 7, movetoworkspacesilent, 7
+bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
+bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
+bind = $mainMod SHIFT, 0, movetoworkspacesilent, 10
 
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
@@ -237,6 +236,13 @@ bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
+
+# dh
+bind = SUPER, Tab, cyclenext,           # change focus to another window
+bind = SUPER, Tab, bringactivetotop,    # bring it to the top
+
+bind = $mainMod, F, fullscreen, 0
+bind = $mainMod SHIFT, F, fullscreen, 1
 
 # dh
 bind = $mainMod, page_up, workspace, e+1
@@ -252,28 +258,43 @@ bind = $mainMod SHIFT, right, movetoworkspace, e+1
 # bind = $mainMod CTRL, right, workspace, e+1
 
 # dh switch current workspace
-bind = $mainMod, left, workspace, e-1
-bind = $mainMod, right, workspace, e+1
+# bind = $mainMod, left, workspace, e-1
+# bind = $mainMod, right, workspace, e+1
+# dh move focus 
+bind = $mainMod, left, movefocus, left
+bind = $mainMod, right, movefocus, right
+# bind = $mainMod, left, layoutmsg, cycleprev
+# bind = $mainMod, right, layoutmsg, cyclenext
+
+
+bind = SUPER SHIFT, H, movewindow, l
+bind = SUPER SHIFT, L, movewindow, r
+bind = SUPER SHIFT, K, movewindow, u
+bind = SUPER SHIFT, J, movewindow, d 
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-# dh GameMode From hyprland.org Wiki
-bind = $mainMod, F11, exec, $HOME/.config/hypr/gamemode.sh
+# dh: use binde for repeating
+binde = $mainMod, Comma, resizeactive, -10 0
+binde = $mainMod, Period, resizeactive, 10 0
+binde = $mainMod SHIFT, Comma, resizeactive, 0 10
+binde = $mainMod SHIFT, Period, resizeactive, 0 -10
 
+# dh GameMode From hyprland.org Wiki
+# not really needed since the workspace rule 
+bind = $mainMod SHIFT, F11, exec, ~/.config/hypr/scripts/gamemode.sh
+bind = $mainMod CTRL, F12, exec, ~/.config/hypr/scripts/steam.sh
 # Steam always on Workspace 10
-workspace = 10, rounding:false, decorate:false, gapsin:0, gapsout:0, border:false, decorate:false
+workspace = 10, decorate:false, rounding:false, gapsin:0, gapsout:0, border:false, shadow:false
 # dh open steam always in workspace 10
 windowrulev2 = workspace 10, title:^(Steam)$
 
-# always float mpv
-# windowrule = float, ^(mpv)$
-
 # dh unbind/bind all with (Mod)+Shift+F12
-bind = $mainMod, F12, submap, clean
+bind = $mainMod SHIFT, F12, submap, clean
 submap = clean
-bind = $mainMod SHIFT, F12, submap, reset
+bind = $mainMod SHIFT CTRL, F12, submap, reset
 submap = reset
 
 # dh screenlock
@@ -301,8 +322,8 @@ bind = , XF86MonBrightnessUp, exec, brightnessctl s +5%
 bind = , XF86MonBrightnessDown, exec, brightnessctl s 5%-
 
 # Volume and Media Control
-bind = , XF86AudioRaiseVolume, exec, pamixer -i 5 
-bind = , XF86AudioLowerVolume, exec, pamixer -d 5 
+binde = , XF86AudioRaiseVolume, exec, pamixer -i 5 
+binde = , XF86AudioLowerVolume, exec, pamixer -d 5 
 bind = , XF86AudioMicMute, exec, pamixer --default-source -m
 bind = , XF86AudioMute, exec, pamixer -t
 bind = , XF86AudioPlay, exec, playerctl play-pause
