--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -30,7 +30,7 @@ $menu = wofi --show drun
 # exec-once = waybar & hyprpaper & firefox
 
 # dh: thunar as daemon
-exec-once = thunar --daemon
+exec-once = $fileManager --daemon
 
 # dh: use waybar
 exec-once = waybar -c $HOME/.config/waybar/config
@@ -72,7 +72,6 @@ cursor {
    no_hardware_cursors = true
 }
 
-
 #####################
 ### LOOK AND FEEL ###
 #####################
@@ -95,8 +94,8 @@ general {
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 
-    # layout = dwindle
-    layout = master
+    layout = dwindle
+    # layout = master
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
@@ -138,6 +137,7 @@ animations {
 dwindle {
     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = true # You probably want this
+    force_split = 0 # dont follow mouse
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
@@ -152,9 +152,15 @@ master {
 misc { 
     force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
-    # font_family = "Source Code Pro"
+    font_family = "Source Code Pro"
+    # font_size = 14
 }
 
+# https://wiki.hyprland.org/Configuring/Tearing/
+# general {
+#     allow_tearing = true
+# }
+# windowrulev2 = immediate, class:^(xxx)$
 
 #############
 ### INPUT ###
@@ -168,7 +174,7 @@ input {
     kb_options =
     kb_rules =
 
-    follow_mouse = 1
+    follow_mouse = 0 
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
@@ -196,8 +202,11 @@ bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
+
+# dwindle
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, H, togglesplit, # dwindle
+bind = $mainMod, J, swapsplit,
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -287,9 +296,9 @@ binde = $mainMod SHIFT, Period, resizeactive, 0 -10
 bind = $mainMod SHIFT, F11, exec, ~/.config/hypr/scripts/gamemode.sh
 bind = $mainMod CTRL, F12, exec, ~/.config/hypr/scripts/steam.sh
 # Steam always on Workspace 10
-workspace = 10, decorate:false, rounding:false, gapsin:0, gapsout:0, border:false, shadow:false
+# workspace = 10, decorate:false, rounding:false, gapsin:0, gapsout:0, border:false, shadow:false
 # dh open steam always in workspace 10
-windowrulev2 = workspace 10, title:^(Steam)$
+# windowrulev2 = workspace 10, title:^(Steam)$
 
 # dh unbind/bind all with (Mod)+Shift+F12
 bind = $mainMod SHIFT, F12, submap, clean
@@ -309,17 +318,14 @@ plugin {
         gap_size = 5
         bg_col = rgb(111111)
         workspace_method = center current # [center/first] [workspace] e.g. first 1 or center m+1
-
-        # enable_gesture = true # laptop touchpad
-        # gesture_fingers = 3  # 3 or 4
-        # gesture_distance = 300 # how far is the "max"
-        # gesture_positive = true # positive = swipe down. Negative = swipe up.
     }
 }
 
 # dh Screen backlight
-bind = , XF86MonBrightnessUp, exec, brightnessctl s +5%
-bind = , XF86MonBrightnessDown, exec, brightnessctl s 5%-
+# bind = , XF86MonBrightnessUp, exec, brightnessctl s +5%
+# bind = , XF86MonBrightnessDown, exec, brightnessctl s 5%-
+# binde = KEY_FN, xxx, exec, brightnessctl s +5%
+# binde = KEY_FN, Minus, exec, brightnessctl s 5%-
 
 # Volume and Media Control
 binde = , XF86AudioRaiseVolume, exec, pamixer -i 5 
@@ -337,15 +343,36 @@ bind = , XF86AudioPrev, exec, playerctl previous
 
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
-
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
+# dh workspaces
+workspace = 1, defaultName:main, persistent:true
+workspace = 2, defaultName:web, persistent:true, decorate:false, gapsin:0, gapsout:0
+workspace = 3, defaultName:file, persistent:true
+workspace = 4, defaultName:dev, decorate:false, gapsin:0, gapsout:0
+workspace = 9, defaultName:music, gapsin:200, gapsout:200
+workspace = 10, defaultName:game, decorate:false, gapsin:0, gapsout:0, shadow:false, border:false
+
+# windowrulev2 = float, class:(Alacritty)
+# windowrulev2 = workspace 4, title:^(
+windowrulev2 = workspace 3, title:^(.*Thunar.*)$
+
+# steam
+windowrulev2 = workspace 10, class:^(steam)$
+windowrulev2 = workspace 10, class:^(.*wlroots.*)$
+
+windowrulev2 = float, class:^(.*Secrets.*)$
+windowrulev2 = size 500 800, class:^(.*Secrets.*)$
+
+windowrulev2 = float, class:^(.*pavucontrol.*)$
+windowrule = float,^(blueman-manager)$
+windowrule = float,^(nm-connection-editor)$
+
+
+# Browser Picture in Picture
+windowrulev2 = float, title:^(Picture-in-Picture)$
+windowrulev2 = pin, title:^(Picture-in-Picture)$
+windowrulev2 = move 69.5% 4%, title:^(Picture-in-Picture)$
 
 # dh Wallpaper with hyprpaper
 # Note: images must be preloaded via hyprpaper.conf
