--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -6,7 +6,6 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,auto
 
-
 ###################
 ### MY PROGRAMS ###
 ###################
@@ -33,16 +32,16 @@ $menu = wofi --show drun
 exec-once = $fileManager --daemon
 
 # dh: use waybar
-exec-once = waybar -c $HOME/.config/waybar/config
+exec-once = waybar -c ~/.config/waybar/config
 
 # dh notifications with mako
-exec-once = mako --config $HOME/.config/mako/config
+exec-once = mako --config ~/.config/mako/config
 
 # dh use hyprpaper as wallpaper app
-exec-once = hyprpaper
+exec-once = hyprpaper -c ~/.config/hyprpaper/config
 
 # hyprpm: reload // hyprexpo:expo plugin
-exec-once = hyprpm reload -n
+# exec-once = hyprpm reload -n
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -80,9 +79,9 @@ cursor {
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general { 
-    gaps_in = 8
-    gaps_out = 8
-    border_size = 2
+    gaps_in = 16
+    gaps_out = 16
+    border_size = 2 
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
@@ -174,7 +173,7 @@ input {
     kb_options =
     kb_rules =
 
-    follow_mouse = 0 
+    follow_mouse = 1 
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
@@ -310,18 +309,22 @@ submap = reset
 bind = SUPER, L, exec, swaylock -f -c 000000
 
 # dh: plugin hyprexpo
-bind = SUPER, grave, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
+# bind = SUPER, grave, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
 
-plugin {
-    hyprexpo {
-        columns = 3
-        gap_size = 5
-        bg_col = rgb(111111)
-        workspace_method = center current # [center/first] [workspace] e.g. first 1 or center m+1
-    }
-}
+# plugin {
+#    hyprexpo {
+#        columns = 3
+#        gap_size = 5
+#        bg_col = rgb(111111)
+#        workspace_method = center current # [center/first] [workspace] e.g. first 1 or center m+1
+#    }
+#}
 
-# dh Screen backlight
+# dh screenshot with grim and slurp
+bind = SHIFT, Print, exec, grim -g "$(slurp -d)" - | wl-copy
+bind = , Print, exec, grim $(xdg-user-dir PICTURES)/$(date +'%s_grim.png')
+
+# dh backlight
 # bind = , XF86MonBrightnessUp, exec, brightnessctl s +5%
 # bind = , XF86MonBrightnessDown, exec, brightnessctl s 5%-
 # binde = KEY_FN, xxx, exec, brightnessctl s +5%
@@ -355,7 +358,8 @@ workspace = 10, defaultName:game, decorate:false, gapsin:0, gapsout:0, shadow:fa
 
 # windowrulev2 = float, class:(Alacritty)
 # windowrulev2 = workspace 4, title:^(
-windowrulev2 = workspace 3, title:^(.*Thunar.*)$
+# windowrulev2 = workspace 3, title:^(.*Thunar.*)$
+windowrulev2 = pin, title:^(.*Thunar.*)$
 
 # steam
 windowrulev2 = workspace 10, class:^(steam)$
@@ -374,15 +378,29 @@ windowrulev2 = float, title:^(Picture-in-Picture)$
 windowrulev2 = pin, title:^(Picture-in-Picture)$
 windowrulev2 = move 69.5% 4%, title:^(Picture-in-Picture)$
 
+# dh mpv
+windowrulev2 = float, title:^(.*mpv.*)$
+windowrulev2 = size 640 480, title:^(.*mpv.*)$
+# windowrulev2 = pin, title:^(.mpv.*)$
+
 # dh Wallpaper with hyprpaper
-# Note: images must be preloaded via hyprpaper.conf
-#bind=SUPER,1,workspace,1  #Superkey + 1 switches to workspace 1
-#bind=SUPER,1,exec,$w1     #SuperKey + 1 switches to wallpaper $w1 on DP-1 as defined in the variable
-#bind=SUPER,2,workspace,2  #Superkey + 2 switches to workspace 2
-#bind=SUPER,2,exec,$w2     #SuperKey + 2 switches to wallpaper $w2 on DP-1 as defined in the variable
-#bind=SUPER,3,workspace,3  #Superkey + 3 switches to workspace 3
-#bind=SUPER,3,exec,$w3     #SuperKey + 3 switches to wallpaper $w3 on DP-1 as defined in the variable
-#... and so on
+$w1 = hyprctl hyprpaper wallpaper "DP-1,~/Wallpaper/wall.jpeg"
+$w2 = hyprctl hyprpaper wallpaper "DP-1,~/Wallpaper/wall-blackgirl1.jpeg"
+$w3 = hyprctl hyprpaper wallpaper "DP-1,~/Wallpaper/wall-blackgirl2.jpeg"
+$w4 = hyprctl hyprpaper wallpaper "DP-1,~/Wallpaper/wall-green1.jpeg"
+$w5 = hyprctl hyprpaper wallpaper "DP-1,~/Wallpaper/wall-green2.jpeg"
+$w6 = hyprctl hyprpaper wallpaper "DP-1,~/Wallpaper/wall-ga.jpeg"
+$w7 = hyprctl hyprpaper wallpaper "DP-1,~/Wallpaper/wall-phg1.jpeg"
+$w8 = hyprctl hyprpaper wallpaper "DP-1,~/Wallpaper/wall-phg2.jpeg"
+# dh additional binding to the above binding $mainMod, 1-8
+bind = $mainMod, 1, exec, $w1
+bind = $mainMod, 2, exec, $w2
+bind = $mainMod, 3, exec, $w3
+bind = $mainMod, 4, exec, $w4
+bind = $mainMod, 5, exec, $w5
+bind = $mainMod, 6, exec, $w6
+bind = $mainMod, 7, exec, $w7
+bind = $mainMod, 8, exec, $w8
 
 
 # dh Enable logs
