--- a/waybar/config
+++ b/waybar/config
@@ -86,7 +86,7 @@
 		// "controller": "controller1", // specify the alias of the controller if there are more than 1 on the system
 		"format": " {status}",
 		"format-disabled": "", // an empty format will hide the module
-		"format-connected": " {num_connections} connected",
+		"format-connected": " {num_connections}",
 		"tooltip-format": "{controller_alias}\t{controller_address}",
 		"tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{device_enumerate}",
 		"tooltip-format-enumerate-connected": "{device_alias}\t{device_address}",
@@ -95,8 +95,9 @@
                 //     "enabled": "",
                 //     "disabled": ""
                 //},
-		"on-click": 	  "bluetoothctl connect A0:A3:09:3E:C6:C4",
-		"on-click-right": "bluetoothctl disconnect A0:A3:09:3E:C6:C4",
+		"on-click": 	  "bluetoothctl power on",
+		"on-click-right": "bluetoothctl power off",
+		"on-click-middle":	"blueman-manager",
 	},
 
 	"memory": {
