Paths corrected, removed Hyprpaper directory config, ...

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -38,7 +38,7 @@ exec-once = waybar -c ~/.config/waybar/config
 exec-once = mako --config ~/.config/mako/config
 
 # dh use hyprpaper as wallpaper app
-exec-once = hyprpaper -c ~/.config/hyprpaper/config
+exec-once = hyprpaper -c ~/.config/hypr/hyprpaper.conf
 
 # hyprpm: reload // hyprexpo:expo plugin
 # exec-once = hyprpm reload -n
@@ -105,7 +105,7 @@ decoration {
     active_opacity = 1.0
     # inactive_opacity = 0.8
 
-    drop_shadow = false
+    # drop_shadow = false
     # shadow_range = 10
     # shadow_render_power = 3
     # col.shadow = rgba(1a1a1aee)
@@ -144,7 +144,7 @@ master {
     new_status = inherit # master # slave, inherit
     orientation = left
     # mfact = 0.7
-    no_gaps_when_only = 0
+    # no_gaps_when_only = 0
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
@@ -153,6 +153,7 @@ misc {
     disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
     font_family = "Source Code Pro"
     # font_size = 14
+    disable_hyprland_qtutils_check = true
 }
 
 # https://wiki.hyprland.org/Configuring/Tearing/
@@ -176,6 +177,9 @@ input {
     follow_mouse = 1 
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+
+    repeat_rate = 25
+    repeat_delay = 600
 
     touchpad {
         natural_scroll = false
@@ -322,7 +326,7 @@ bind = SUPER, L, exec, swaylock -f -c 000000
 
 # dh screenshot with grim and slurp
 bind = SHIFT, Print, exec, grim -g "$(slurp -d)" - | wl-copy
-bind = , Print, exec, grim $(xdg-user-dir PICTURES)/$(date +'%s_grim.png')
+bind = , Print, exec, grim $(xdg-user-dir PICTURES)/Screenshots/$(date +'%s_grim.png')
 
 # dh backlight
 # bind = , XF86MonBrightnessUp, exec, brightnessctl s +5%
@@ -379,29 +383,29 @@ windowrulev2 = pin, title:^(Picture-in-Picture)$
 windowrulev2 = move 69.5% 4%, title:^(Picture-in-Picture)$
 
 # dh mpv
-windowrulev2 = float, title:^(.*mpv.*)$
-windowrulev2 = size 640 480, title:^(.*mpv.*)$
+# windowrulev2 = float, title:^(.*mpv.*)$
+# windowrulev2 = size 640 480, title:^(.*mpv.*)$
 # windowrulev2 = pin, title:^(.mpv.*)$
 
 # dh Wallpaper with hyprpaper
-$w1 = hyprctl hyprpaper wallpaper "DP-1,~/Wallpaper/wall.jpeg"
-$w2 = hyprctl hyprpaper wallpaper "DP-1,~/Wallpaper/wall-blackgirl1.jpeg"
-$w3 = hyprctl hyprpaper wallpaper "DP-1,~/Wallpaper/wall-blackgirl2.jpeg"
-$w4 = hyprctl hyprpaper wallpaper "DP-1,~/Wallpaper/wall-green1.jpeg"
-$w5 = hyprctl hyprpaper wallpaper "DP-1,~/Wallpaper/wall-green2.jpeg"
-$w6 = hyprctl hyprpaper wallpaper "DP-1,~/Wallpaper/wall-ga.jpeg"
-$w7 = hyprctl hyprpaper wallpaper "DP-1,~/Wallpaper/wall-phg1.jpeg"
-$w8 = hyprctl hyprpaper wallpaper "DP-1,~/Wallpaper/wall-phg2.jpeg"
-# dh additional binding to the above binding $mainMod, 1-8
-bind = $mainMod, 1, exec, $w1
-bind = $mainMod, 2, exec, $w2
-bind = $mainMod, 3, exec, $w3
-bind = $mainMod, 4, exec, $w4
-bind = $mainMod, 5, exec, $w5
-bind = $mainMod, 6, exec, $w6
-bind = $mainMod, 7, exec, $w7
-bind = $mainMod, 8, exec, $w8
+# $w1 = hyprctl hyprpaper wallpaper "DP-1,~/Wallpaper/wall.jpeg"
+# $w2 = hyprctl hyprpaper wallpaper "DP-1,~/Wallpaper/wall-blackgirl1.jpeg"
+# $w3 = hyprctl hyprpaper wallpaper "DP-1,~/Wallpaper/wall-blackgirl2.jpeg"
+# $w4 = hyprctl hyprpaper wallpaper "DP-1,~/Wallpaper/wall-green1.jpeg"
+# $w5 = hyprctl hyprpaper wallpaper "DP-1,~/Wallpaper/wall-green2.jpeg"
+# $w6 = hyprctl hyprpaper wallpaper "DP-1,~/Wallpaper/wall-ga.jpeg"
+# $w7 = hyprctl hyprpaper wallpaper "DP-1,~/Wallpaper/wall-phg1.jpeg"
+# $w8 = hyprctl hyprpaper wallpaper "DP-1,~/Wallpaper/wall-phg2.jpeg"
 
+# dh additional binding to the above binding $mainMod, 1-8
+# bind = $mainMod, 1, exec, $w1
+# bind = $mainMod, 2, exec, $w2
+# bind = $mainMod, 3, exec, $w3
+# bind = $mainMod, 4, exec, $w4
+# bind = $mainMod, 5, exec, $w5
+# bind = $mainMod, 6, exec, $w6
+# bind = $mainMod, 7, exec, $w7
+# bind = $mainMod, 8, exec, $w8
 
 # dh Enable logs
 # debug:disable_logs = false
