--- a/.config/mako/config
+++ b/.config/mako/config
@@ -12,7 +12,8 @@ max-icon-size=64
 default-timeout=5000
 ignore-timeout=1
 #font=monospace 14
-font=Roboto Mono Medium 12
+#font=Roboto Mono Medium 12
+font=Source Code Pro 12
 
 [urgency=low]
 border-color=#cccccc
