--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,1 +1,127 @@
+// -*- mode: json -*-
 
+{
+	"layer": "top",
+	"position": "top",
+
+	"modules-left": [
+		"hyprland/workspaces",
+		"niri/workspaces",
+	],
+
+	"modules-right": [
+		"pulseaudio",
+		"bluetooth",
+		"memory",
+		"cpu",
+		"network",
+		"tray",
+		"clock"
+	],
+
+	"hyprland/workspaces": {
+	  "format": "{icon}",
+	  "disable-scroll": true,
+	  "on-click": "activate",
+	  "format-icons": {
+	    "1": "",
+	    "2": "",
+	    "3": "",
+	    "4": "",
+	    "5": "",
+	    "urgent": "",
+	    "active": "",
+	    "default": ""
+	  },
+	  "sort-by-number": true
+	},
+
+        "niri/workspaces": {
+          "format": "{icon}",
+          "disable-scroll": true,
+          "on-click": "activate",
+          "format-icons": {
+            "1": "",
+            "2": "",
+            "3": "",
+            "4": "",
+            "5": "",
+            "urgent": "",
+            "active": "",
+            "default": ""
+          },
+          "sort-by-number": true
+        },
+
+	"clock": {
+		"format": "{:%Y-%m-%d | %H:%M}",
+	        "tooltip-format": "{:%Y-%m-%d | %H:%M}",
+        	"format-alt": "{:%Y-%m-%d}"
+	},
+
+	"pulseaudio": {
+		"format": "{icon} {volume:2}%",
+
+		"format-bluetooth": "{icon}  {volume}%",
+
+		"format-muted": "  {format_source}",
+		// "format-muted": "MUTE",
+
+		"format-icons": {
+			"headphones": "",
+			"handsfree": "",
+			"headset": "",
+			"phone": "",
+			"portable": "",
+			"car": "",
+			"default": ["🔈", "🔉", "🔊"]
+		},
+
+		"scroll-step": 5,
+		"on-click-right": "pamixer -t",
+		"on-click": "pavucontrol"
+	},
+
+	"bluetooth": {
+		// "controller": "controller1", // specify the alias of the controller if there are more than 1 on the system
+		"format": " {status}",
+		"format-disabled": "", // an empty format will hide the module
+		"format-connected": " {num_connections}",
+		"tooltip-format": "{controller_alias}\t{controller_address}",
+		"tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{device_enumerate}",
+		"tooltip-format-enumerate-connected": "{device_alias}\t{device_address}",
+                "format-alt": "bluetooth: {status}",
+                //"format-icons": {
+                //     "enabled": "",
+                //     "disabled": ""
+                //},
+		"on-click": 	  "bluetoothctl power on",
+		"on-click-right": "bluetoothctl power off",
+		"on-click-middle":	"blueman-manager",
+	},
+
+	"memory": {
+		"interval": 5,
+		"format": "Mem {}%"
+	},
+
+
+	"network": {
+		"interval": 10,
+	        // "interface": "wlpXsY", // (Optional) To force the use of this interface
+	        "format-wifi": "{essid} ({signalStrength}%) ",
+	        "format-ethernet": "{ifname}: {ipaddr}/{cidr} ",
+	        "format-disconnected": "Disconnected ⚠",
+		// "on-click": "alacritty -e ip a"
+	},
+
+	"cpu": {
+		"interval": 5,
+		"format": "CPU {usage:2}%",
+		"on-click": "alacritty -e htop"
+	},
+
+	"tray": {
+		"icon-size": 20
+	}
+}
