--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -79,8 +79,8 @@ cursor {
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general { 
-    gaps_in = 16
-    gaps_out = 16
+    gaps_in = 0
+    gaps_out = 0
     border_size = 2 
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
@@ -296,18 +296,20 @@ binde = $mainMod SHIFT, Period, resizeactive, 0 -10
 
 # dh GameMode From hyprland.org Wiki
 # not really needed since the workspace rule 
-bind = $mainMod SHIFT, F11, exec, ~/.config/hypr/scripts/gamemode.sh
-bind = $mainMod CTRL, F12, exec, ~/.config/hypr/scripts/steam.sh
-# Steam always on Workspace 10
-# workspace = 10, decorate:false, rounding:false, gapsin:0, gapsout:0, border:false, shadow:false
-# dh open steam always in workspace 10
-# windowrulev2 = workspace 10, title:^(Steam)$
+# bind = $mainMod SHIFT, F11, exec, ~/.config/hypr/scripts/gamemode.sh
+# bind = $mainMod CTRL, F12, exec, ~/.config/hypr/scripts/steam.sh
+
+
+# dh: Steam always on Workspace 10
+workspace = 10, decorate:false, rounding:false, gapsin:0, gapsout:0, border:false, shadow:false
+# dh: open steam always in workspace 10
+windowrulev2 = workspace 10, title:^(Steam)$
 
 # dh unbind/bind all with (Mod)+Shift+F12
-bind = $mainMod SHIFT, F12, submap, clean
-submap = clean
-bind = $mainMod SHIFT CTRL, F12, submap, reset
-submap = reset
+# bind = $mainMod SHIFT, F12, submap, clean
+# submap = clean
+# bind = $mainMod SHIFT CTRL, F12, submap, reset
+# submap = reset
 
 # dh screenlock
 bind = SUPER, L, exec, swaylock -f -c 000000
