--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -41,7 +41,7 @@ exec-once = mako --config ~/.config/mako/config
 exec-once = hyprpaper -c ~/.config/hypr/hyprpaper.conf
 
 # hyprpm: reload // hyprexpo:expo plugin
-# exec-once = hyprpm reload -n
+exec-once = hyprpm reload -n
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -315,20 +315,32 @@ windowrulev2 = workspace 10, title:^(Steam)$
 bind = SUPER, L, exec, swaylock -f -c 000000
 
 # dh: plugin hyprexpo
-# bind = SUPER, grave, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
+bind = SUPER, grave, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
 
-# plugin {
-#    hyprexpo {
-#        columns = 3
-#        gap_size = 5
-#        bg_col = rgb(111111)
-#        workspace_method = center current # [center/first] [workspace] e.g. first 1 or center m+1
-#    }
-#}
+plugin {
+   hyprexpo {
+       columns = 3
+       gap_size = 5
+       bg_col = rgb(111111)
+       workspace_method = center current # [center/first] [workspace] e.g. first 1 or center m+1
+   }
+   
+   # hyprwinwrap {
+   #    # class is an EXACT match and NOT a regex!
+   #    class = kitty-bg
+   # }
+
+   #hyprtrails {
+   #    color = rgba(ffaa00ff)
+   #}
+}
 
 # dh screenshot with grim and slurp
 bind = SHIFT, Print, exec, grim -g "$(slurp -d)" - | wl-copy
 bind = , Print, exec, grim $(xdg-user-dir PICTURES)/Screenshots/$(date +'%s_grim.png')
+
+# dh headphones
+bind = $mainMod, F1, exec, ~/.config/hypr/scripts/ap.sh
 
 # dh backlight
 # bind = , XF86MonBrightnessUp, exec, brightnessctl s +5%
@@ -408,6 +420,31 @@ windowrulev2 = move 69.5% 4%, title:^(Picture-in-Picture)$
 # bind = $mainMod, 6, exec, $w6
 # bind = $mainMod, 7, exec, $w7
 # bind = $mainMod, 8, exec, $w8
+
+# dh: quake mode
+# bind = CTRL, grave, exec, ~/.config/hypr/scripts/alacritty_quake.sh 
+bind = CTRL, grave, exec, alacritty --class Alacritty,dropdown -T alacritty-dropdown
+windowrulev2 = float, title:^(alacritty-dropdown)$
+# take 1/3 of the screen
+windowrulev2 = size 100% 33%, title:^(alacritty-dropdown)$
+# top of screen minus waybar size
+windowrulev2 = move 0 32, title:^(alacritty-dropdown)$
+
+# dh: resize window (from hyprland.org)
+# will switch to a submap called resize
+bind = ALT, R, submap, resize
+# will start a submap called "resize"
+submap = resize
+# sets repeatable binds for resizing the active window
+binde = , right, resizeactive, 10 0
+binde = , left, resizeactive, -10 0
+binde = , up, resizeactive, 0 -10
+binde = , down, resizeactive, 0 10
+# use reset to go back to the global submap
+bind = , escape, submap, reset
+# will reset the submap, which will return to the global submap
+submap = reset
+# keybinds further down will be global again...
 
 # dh Enable logs
 # debug:disable_logs = false
