--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -432,7 +432,7 @@ windowrulev2 = move 0 32, title:^(alacritty-dropdown)$
 
 # dh: resize window (from hyprland.org)
 # will switch to a submap called resize
-bind = ALT, R, submap, resize
+bind = SUPER SHIFT, R, submap, resize
 # will start a submap called "resize"
 submap = resize
 # sets repeatable binds for resizing the active window
